Add item requests (#3)
* fix: добавить комментарии к коду

* feat: изменит файл README.md

* feat: добавить таблицу requests в schema.sql

* feat: изменит ItemRequest.java

* feat: добавить функционал для сохранения ItemRequest

* feat: добавить тесты для ItemRequest

* fix: подправить CommentMapper

* feat: добавить функционал о запросах на вещи

* feat: добавить получение данных о запросе

* feat: добавить постраничный вывод для booking

* feat: добавить постраничный вывод для item

* feat: добавить тесты для ItemRequest и Utils

* feat: добавить тесты для User

* feat: добавить тесты для Item и Comment

* feat: добавить тесты для Booking

* feat: добавить тесты DataJpaTest

* feat: добавит тест для Booking

* refactor: удалить лишний код

* fix: перенос проверки в сервис

* fix: добавить тесты для UserIntegrationTest

* fix: добавить тесты для ItemIntegrationTest

* fix: добавить тесты для BookingIntegrationTest

* fix: добавить тесты для ItemRequestIntegrationTest